--- a/src/style.css
+++ b/src/style.css
@@ -98,3 +98,9 @@ body {
   font-size: 17px;
   margin-top: -20px;
 }
+
+#coded-by {
+  margin-left: 20px;
+  font-size: 14px;
+  text-decoration: none;
+}
