--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,9 @@ body {
 
 #weather-description {
   color: #5d7574;
-  font-size: 16px;
+  font-size: 14px;
+  margin-top: -30px;
+  margin-left: 7px;
 }
 
 #weather-description:first-letter {
@@ -118,4 +120,7 @@ body {
 
 #temp-div .active:hover {
   text-decoration: none;
+}
+#icon {
+  margin-top: -30px;
 }
