--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,8 @@ body {
   font-size: 14px;
   margin-top: -30px;
   margin-left: 7px;
+  line-height: 1;
+  padding: 0;
 }
 
 #weather-description:first-letter {
@@ -123,4 +125,14 @@ body {
 }
 #icon {
   margin-top: -30px;
+}
+
+.weather-forecast {
+  font-size: 16px;
+}
+.weather-forecast-temps {
+  font-size: 13px;
+}
+.forecast-temp-high {
+  font-weight: bold;
 }
