--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   margin-top: 30px;
-  background-color: #c6d8d8;
+  background-color: #dfeee8;
   font-family: "Dosis", sans-serif;
   max-width: 700px;
   max-height: 500px;
@@ -11,25 +11,25 @@ body {
 }
 
 #weather-app {
-  background-color: #e2e7e7;
+  background-color: #dde7e4;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
   margin: 10px;
-  color: #5d7574;
-  border: 1px solid #80a3a2;
+  color: #4f5e58;
+  border: 1px solid #48534f;
   border-radius: 7px;
   padding: 10px;
 }
 #location {
   font-size: 30px;
   font-weight: 800;
-  color: #536867;
+  color: #4f5e58;
   margin-top: 0;
   margin-bottom: 0px;
   padding-bottom: 0px;
 }
 #current-temperature {
   font-size: 50px;
-  color: #536867;
+  color: #4f5e58;
   line-height: 1;
 }
 #current-date {
@@ -40,26 +40,26 @@ body {
   margin-bottom: 20px;
 }
 #city-input {
-  border: 1px solid #536867;
+  border: 1px solid #4f5e58;
   border-radius: 7px;
-  background-color: #e9fcfc;
+  background-color: #f0fdf8;
 }
 #change-city-button {
-  border: 1px solid #536867;
+  border: 1px solid #4f5e58;
   border-radius: 7px;
-  background: #536867;
-  color: #e8fafa;
+  background: #4f5e58;
+  color: #f0fdf8;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 #change-city-form {
-  color: #536867;
+  color: #4f5e58;
   font-size: 16px;
   margin-top: 0px;
 }
 #current-location-button {
   border: none;
-  background-color: #e2e7e7;
-  color: #536867;
+  background-color: #dde7e4;
+  color: #4f5e58;
   margin-top: 2px;
 }
 
@@ -67,7 +67,7 @@ body {
   margin-top: 0;
 }
 #temp-units {
-  color: #5d7574;
+  color: #4f5e58;
   font-size: 15px;
   display: inline-block;
   padding-top: 5px;
@@ -85,19 +85,6 @@ body {
 #current-low {
   font-size: 14px;
   text-align: right;
-}
-
-#weather-description {
-  color: #5d7574;
-  font-size: 14px;
-  margin-top: -30px;
-  margin-left: 7px;
-  line-height: 1;
-  padding: 0;
-}
-
-#weather-description:first-letter {
-  text-transform: capitalize;
 }
 
 #current-location-img {
@@ -118,7 +105,7 @@ body {
 }
 
 #temp-div .active {
-  color: #5d7574;
+  color: #4f5e58;
   cursor: default;
 }
 
@@ -126,7 +113,8 @@ body {
   text-decoration: none;
 }
 #icon {
-  margin-top: -30px;
+  margin-top: -20px;
+  text-align: center;
 }
 
 .weather-forecast {
