--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   margin-top: 30px;
-  background-color: #dfeee8;
+  background-color: #f0faf7;
   font-family: "Dosis", sans-serif;
   max-width: 700px;
   max-height: 500px;
@@ -20,8 +20,8 @@ body {
   padding: 10px;
 }
 #location {
-  font-size: 30px;
-  font-weight: 800;
+  font-size: 32px;
+  font-weight: 600;
   color: #4f5e58;
   margin-top: 0;
   margin-bottom: 0px;
@@ -53,8 +53,10 @@ body {
 }
 #change-city-form {
   color: #4f5e58;
-  font-size: 16px;
-  margin-top: 0px;
+  font-size: 15px;
+  margin-top: 6px;
+  margin-left: -20px;
+  text-align: left;
 }
 #current-location-button {
   border: none;
@@ -114,7 +116,7 @@ body {
 }
 #icon {
   margin-top: -20px;
-  text-align: center;
+  text-align: left;
 }
 
 .weather-forecast {
